--- a/css/style.css
+++ b/css/style.css
@@ -50,10 +50,10 @@ nav a{
 nav a:hover{
     color: yellow;
 }
-.font1{
+span{
     color: yellow;
 }
-.font2{
+.span-sushi{
     color: red;
 }
 
@@ -115,9 +115,6 @@ nav a:hover{
     height: 2px;
 }
 
-@media screen and (max-width: 1280px) { div.contentblock {width: 1200px;} }
-@media screen and (max-width: 1140px) { div.contentblock {width: 1024px;} } 
-@media screen and (max-width: 992px) { div.contentblock {width: 970px;} }
 
 
 
