--- a/css/popular.css
+++ b/css/popular.css
@@ -79,10 +79,10 @@ nav a:hover{
     color: black;
 }
 
-.font1{
+span{
     color: yellow;
 }
-.font2{
+.span-sushi{
     color: red;
 }
 .a-2:hover{
