--- a/css/stocks.css
+++ b/css/stocks.css
@@ -50,10 +50,10 @@ nav a{
 nav a:hover{
     color:yellow;
 }
-.font1{
+span{
     color: yellow;
 }
-.font2{
+.span-sushi{
     color: red;
 }
 .a-2:hover{
